...

    <string name="app_name" translatable="false">Simplenote</string>
    <string name="app_launcher_name" translatable="false">@string/app_name</string>
    <string name="tag_hint">Add tag&#8230;</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="new_note">New Note</string>
    <string name="account">Account</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_email_message">By deleting the account for email %1$s, all notes created with this account will be permanently deleted. This action is not reversible.</string>
    <string name="request_received">Request Received</string>
    <string name="account_deletion_message">An email was sent to %1$s. Check your inbox and follow the instructions to confirm account deletion.\n\nYour account won\'t be deleted until we receive your confirmation.</string>
    <string name="error_ocurred_message">An error occurred. Please, try again. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="requesting_message">Requesting…</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="words">Words</string>
    <string name="invalid_tag">Invalid Tag</string>
    <string name="tag_added_as_collaborator">%1$s added as a collaborator.</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="rename_tag">Rename Tag</string>
    <string name="rename_tag_error_empty">Tags cannot be empty</string>
...
    <string name="rename_tag_message_length">The tag length is too long. Please, try again with a shorter name. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="tag_name">Tag name</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="empty">Empty</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="confirm_empty_trash">Do you want to empty the trash? All notes in trash will be permanently deleted. This action cannot be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="word">Word</string>
    <string name="website">Visit website</string>
...
    <string name="search_tags_hint">Search tags</string>
    <string name="notes">Notes</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_error_message">An error occurred deleting the note. Please, try again. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="delete_dialog_message">Do you want to permanently delete this note? This action cannot be undone.</string>
    <string name="delete_dialog_title">Delete Permanently</string>
    <string name="trash">Trash</string>
    <string name="untagged_notes">Untagged Notes</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="information">Information</string>
    <string name="tags">Tags</string>
    <string name="edit">Edit</string>
...
    <string name="markdown_show">Show Markdown</string>
    <string name="character">Character</string>
    <string name="characters">Characters</string>
    <string name="logo">Logo</string>
    <string name="copy_link">Copy Link</string>
    <string name="copy_link_internal">Copy Internal Link</string>
    <string name="more_options">More Options</string>
    <string name="open_note">Open Note</string>
    <string name="open_note_error">Note could not be found</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="of">of</string>
    <string name="references">Referenced In</string>
...

    <!-- Themes -->
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_auto">Dark at night only</string>
    <string name="theme_system">System default</string>
    <string name="theme">Theme</string>

    <!-- About screen -->
    <string name="about">About</string>
    <string name="about_copyright">&#169; Automattic %1$d</string>
    <string name="about_contribute_subtitle">github.com</string>
    <string name="about_contribute_title">Contribute</string>
...
    <string name="unsynced_notes">Unsynced Notes</string>
    <string name="unsynced_notes_message">Logging out will delete any unsynced notes.</string>
    <string name="export_unsynced_notes">Export unsynced notes</string>
    <string name="log_out_anyway">Log out anyway</string>

    <!-- Note publishing -->
    <string name="publish">Publish</string>
    <string name="unpublish">Remove public link</string>
    <string name="published">Published</string>
    <string name="publish_error">Could not publish note.</string>
    <string name="unpublish_error">Could not unpublish note.</string>
    <string name="publish_successful">Note published.</string>
    <string name="unpublish_successful">Note unpublished.</string>
...
    <string name="reconnect_to_wordpress">Please reconnect to WordPress.com.</string>
    <string name="wordpress_post_link">Share WordPress Post</string>
    <string name="could_not_access_site_data">Could not access site data.</string>
    <string name="empty_note_post">Can\'t post an empty note.</string>
    <string name="sort_tags_alphabetically">Sort alphabetically</string>
    <string name="appearance">Appearance</string>
    <string name="all_notes">All Notes</string>
    <string name="toggle_checklist">Toggle Checklist</string>

    <string name="description_close">Close</string>
    <string name="description_delete_item">Delete item</string>
    <string name="description_down">Down</string>
    <string name="description_mail">Mail</string>
...
    <!-- PASSCODE -->
    <string name="passcode_change_passcode">Change passcode</string>
    <string name="passcode_enter_old_passcode">Enter your old passcode</string>
    <string name="passcode_preference_title">Passcode Lock</string>
    <string name="passcode_re_enter_passcode">Confirm your passcode</string>
    <string name="passcode_summary">Screenshots are disabled while passcode lock is on</string>
    <string name="passcode_turn_off">Turn passcode lock off</string>
    <string name="passcode_turn_on">Turn passcode lock on</string>
    <string name="passcode_wrong_passcode">Wrong passcode, please try again.</string>
    <string name="passcodelock_prompt_message">Enter your passcode</string>

    <!-- SHORTCUTS -->
    <string name="action">Action</string>
    <string name="item_action_note_new" translatable="false">@string/new_note</string>
...
