<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ab_icon_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search" />

    <item
...
            android:id="@+id/menu_delete"
            android:icon="@drawable/ab_icon_trash"
            android:showAsAction="never"
            android:title="@string/delete"/>

    <item
            android:id="@+id/menu_empty_trash"
            android:icon="@drawable/ab_icon_empty_trash"
            android:showAsAction="ifRoom"
            android:title="@string/empty_trash"/>

    <item
            android:id="@+id/menu_edit_tags"
...
